fix: 1.修复Collapse Header样式问题

--- a/src/components/AppEdit/index.less
+++ b/src/components/AppEdit/index.less
@@ -94,6 +94,7 @@
         display: flex;
         align-items: center;
         height: 100%;
+        width: 100%;
       }
       .editItemMore {
         display: inline-flex;
